testing/errors/expressionnotstring3.a
	*=$1000
	!sl [0]	; -> "Expression did not return a string."
